# webflight

./: .eslintrc.cjs  .gitignore  README.md  index.html  package-lock.json  package.json  test-wasm.html  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: test.yml
docs/: dnm_srf_mapping.md  implementable_models_priority.md  implementation-roadmap.md  pck_referenced_nonexistent_files.md  working-models.md  ysflight-resources.md
scripts/: copy-aircraft.sh  install-emscripten.sh
src/: App.css  App.test.tsx  App.tsx
src/components/: AircraftSelector.css  AircraftSelector.tsx  FlightSimulation.css  FlightSimulation.tsx  FlightSimulator.css  FlightSimulator.tsx  HUD.css  HUD.tsx  ModelScreenshotGenerator.tsx  SRFTestViewer.tsx  VisualModelTest.tsx  WasmTest.tsx
src/hooks/: useKeyboardControls.ts
src/integration/: aircraft-loading.test.ts
src/loaders/: AircraftDataParser.ts  AircraftListParser.ts  DNMModelParser.test.ts  DNMModelParser.ts  SRFModelParser.integration.test.ts  SRFModelParser.test.ts  SRFModelParser.ts
src/managers/: AircraftManager.test.ts  AircraftManager.ts
src/renderer/: CameraManager.ts  SimulationRenderer.ts  WebGLRenderer.ts
src/tests/: setup.ts  wasm-integration.test.ts
src/tests/integration/: aircraft-loading.test.ts
src/types/: three-examples.d.ts  wasm.d.ts
src/utils/: wasm-loader.ts
wasm/: CMakeLists.txt  Makefile
wasm/src/: bindings.cpp  main.cpp  math_utils.cpp  simulation.cpp  simulation.h  simulation_bindings.cpp  test_module.cpp
